<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/account"
            android:title="@string/Profile" />
        <item
            android:id="@+id/trans"
            android:icon="@drawable/ic_baseline_airport_shuttle_24"
            android:title="@string/Trans" />
        <item
            android:id="@+id/pre_book"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/previous_Booking" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/Feedback" />
    </group>
</menu>