<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/back"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="86dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:src="@drawable/logo3"
        app:civ_border_width="1dp"
        app:civ_border_color="#fff"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
    <TextView
        android:drawableStart="@drawable/ic_baseline_verified_user_24"
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Please Verify Your Email"
        android:layout_marginTop="5dp"
        android:textColor="#F74646"
        />
    <Button
        android:background="@drawable/btn3"
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Verification Link"
        android:textColor="#FFFEFE"
        android:layout_marginTop="10dp"
        android:textSize="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

</LinearLayout>